--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,24 @@
+# FastAPI Core
 fastapi
 uvicorn[standard]
-sqlalchemy
+
+# Database
+sqlalchemy>=2.0
 psycopg2-binary
+
+# Settings / Environment
+pydantic>=2.0
 pydantic-settings>=2.0
 python-dotenv
-numpy
+
+# Math / Embedding
+numpy>=2.0
+
+# HTTP Networking
 httpx>=0.24.0
+
+# Rate Limiting
+slowapi==0.1.8
+
+# Logging
+structlog
